	* S32 - fix factor to correct external temperatures
	* S32_2 - initial release for S32 as version 2 displaying all measurement values on a single time line
	* S32 - fix measurement synchronization references (need device XML replacement)
	* S32 - fix external temperature factor according customer feedback
	* Ultramat* single channel charger - fix possible NullPointerException

History analysis
	* Enhance UI
		>> Add refresh menu item and shortcut
		>> Add object key wizard (if accessing new directories) 
		>> Remove MessageBox "No log files"
		>> Fix importing from histo table with reversed x axis opens wrong file
		>> Fix InvalidPathException@_SupplementObjectDirs
		>> Fix wrong decimal places if switching from histo graphics to histo table
	* Remove searching in the current import path (is obsolete due to remote log file support)
	* Enhance performance
	 	>> Memory cache for aggregated histo data 
	 	>> Optimized directory scans for graphics refresh 
	 	>> Code optimizations to avoid materialization
	 	>> Remove syncing slave records for incomplete master records
 	* Support new file extensions separator

Version 3.3.2 - 15 Apr 2018
* fix illegal formatting option in ParameterControl used for Graupner UDP charger
* fix HoTTAdapter wrong data block number detection
* fix empty template file name if user cancels loading a template
* fix some issues when adding / editing object keys
* fix wrong interpretation and display of geo-coordinates received as degree with decimal digits
* fix parsing error with values coming with comma as separator to decimal places
* fix setting of time grid building new template
* fix circular UI update calls
* fix/tolerate Jeti new alarm protocol 
* context menu texts (graphics / data table tabs)
* add initial support for Junsi iCharger 106B
* add initial support for ELV WDE (Wetter-Daten-Empfänger)
* add initial support for a generic CSV import (using Tesla Battery sample CSV file as source)