@@ -39,12 +39,22 @@ fehlende Mappings einfach ergaenzen, bitte informieren Sie den Entwickler
   <entry key="Cell 12">ZellenSpannung 12 [V]</entry>
   <entry key="Current">Strom [A]</entry>
   <entry key="Consumption">Kapazität [mAh]</entry>
-  <entry key="Vfas">Vfas [-]</entry>
+  <entry key="Vfas">Spannung [V]</entry>
   <entry key="AccelX">Accel X [m/sec]</entry>
   <entry key="AccelY">Accel Y [m/sec]</entry>
   <entry key="AccelZ">Accel Z [m/sec]</entry>
   <entry key="Rud">Seitenruder [msec]</entry>
   <entry key="Ele">Höhenruder [msec]</entry>
   <entry key="Thr">Gas [msec]</entry>
-  <entry key="Ail">Querruder [msec]</entry>
+  <entry key="Alt">Höhe [m]</entry>
+  <entry key="VSpd">Steigen [m/s]</entry>
+  <entry key="RxBt">SpannungRx [V]</entry>
+  <entry key="TxBat">SpannungTx [V]</entry>
+  <entry key="VFAS">Spannung [V]</entry>
+  <entry key="Curr">Strom [A]</entry>
+  <entry key="Tmp2">Temperatur2 [°C]</entry>
+  <entry key="TFET">TemperaturFET [°C]</entry>
+  <entry key="TBEC">TemperaturBEC [°C]</entry>
+  <entry key="PWM">PWM [%]</entry>
+  <entry key="Cels">SpannungZellen [V]</entry>
 </properties>
